@@ -5,6 +5,25 @@ you want to use it to sneakernet files between systems (possibly with
 [[encrypted|encryption]] contents). Just set up both systems to use
 the drive's mountpoint as a directory remote.
 
+## configuration
+
+These parameters can be passed to `git annex initremote` to configure the
+remote:
+
+* `encryption` - Required. Either "none" to disable encryption of content
+  stored in the directory,
+  or a value that can be looked up (using gpg -k) to find a gpg encryption
+  key that will be given access to the remote. Note that additional gpg
+  keys can be given access to a remote by rerunning initremote with
+  the new key id. See [[encryption]].
+* `chunksize` - Avoid storing files larger than the specified size in the
+  directory. For use on directories on mount points that have file size
+  limitations. The default is to never chunk files.
+  Note that changing the chunk size of an existing remote is 
+  not recommended.
+  The value can use specified using any commonly used units.
+  Example: `chunksize=100 megabytes`
+
 Setup example:
 
 	# git annex initremote usbdrive type=directory directory=/media/usbdrive/ encryption=none
