@@ -2,6 +2,8 @@ git-annex (3.20120230) UNRELEASED; urgency=low
 
   * "here" can be used to refer to the current repository,
     which can read better than the old "." (which still works too).
+  * Directory special remotes now support chunking files written to them,
+    avoiding writing files larger than a specified size.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 01 Mar 2012 22:34:27 -0400
 
